--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@zalando/oauth2-client-js": "0.0.18",
+    "client-oauth2": "^4.3.3",
+    "disconnect": "^1.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "spotify-web-api-js": "^1.5.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
